; ModuleID = '/home/carl/AnghaBench/freebsd/tests/sys/posixshm/extr_posixshm_test.c_shm_unlink_should_fail.c'
source_filename = "/home/carl/AnghaBench/freebsd/tests/sys/posixshm/extr_posixshm_test.c_shm_unlink_should_fail.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [23 x i8] c"shm_unlink didn't fail\00", align 1
@errno = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [72 x i8] c"shm_unlink didn't fail with expected errno; errno=%d; expected errno=%d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @shm_unlink_should_fail to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @shm_unlink_should_fail(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i8*, i8** %3, align 8
  %6 = call i32 @shm_unlink(i8* %5)
  %7 = icmp eq i32 %6, -1
  %8 = zext i1 %7 to i32
  %9 = call i32 (i32, i8*, ...) @ATF_CHECK_MSG(i32 %8, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* @errno, align 4
  %12 = icmp eq i32 %10, %11
  %13 = zext i1 %12 to i32
  %14 = load i32, i32* @errno, align 4
  %15 = load i32, i32* %4, align 4
  %16 = call i32 (i32, i8*, ...) @ATF_CHECK_MSG(i32 %13, i8* getelementptr inbounds ([72 x i8], [72 x i8]* @.str.1, i64 0, i64 0), i32 %14, i32 %15)
  ret void
}

declare dso_local i32 @ATF_CHECK_MSG(i32, i8*, ...) #1

declare dso_local i32 @shm_unlink(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
